--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <div class="main">
         <section>
-            <h2 class="blog">What is Hacktober2021?</h2>
-            <p>Hacktoberfest 2021 is the 8th edition of Hacktoberfest hosted by DigitalOcean. It is an open source festival celebrated during October every year, encouraging people worldwide to actively participate and contribute to participating open source projects hosted across GitHub and GitLab.
+            <h2 class="blog" style="background-color:DodgerBlue;">What is Hacktober2021?</h2>
+            <p style="background-color:Tomato;">Hacktoberfest 2021 is the 8th edition of Hacktoberfest hosted by DigitalOcean. It is an open source festival celebrated during October every year, encouraging people worldwide to actively participate and contribute to participating open source projects hosted across GitHub and GitLab.
 
             In fact, Hacktoberfest 2020 had attracted 169,886 participants and 116,361 participating open source repositories, representing 135 countries.
 
